// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectDetails renders correctly with activity data 1`] = `
<DocumentFragment>
  <dl
    class="MuiBox-root MuiBox-root-3"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-6"
      >
        <dt
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
        >
          Type
        </dt>
        <dd
          class="MuiTypography-root MuiTypography-body1"
        >
          Project type
        </dd>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-6"
      >
        <dt
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
        >
          Timeline
        </dt>
        <dd
          class="MuiTypography-root MuiTypography-body1"
        >
          Oct 10, 1998 - Feb 26, 2021
        </dd>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-12"
      >
        <dt
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
        >
          Activities
        </dt>
        <dd
          class="MuiTypography-root MuiTypography-body1"
        >
          Activity code
        </dd>
      </div>
    </div>
  </dl>
</DocumentFragment>
`;

exports[`ProjectDetails renders correctly with no activity data 1`] = `
<DocumentFragment>
  <dl
    class="MuiBox-root MuiBox-root-2"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-6"
      >
        <dt
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
        >
          Type
        </dt>
        <dd
          class="MuiTypography-root MuiTypography-body1"
        >
          Project type
        </dd>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-6"
      >
        <dt
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
        >
          Timeline
        </dt>
        <dd
          class="MuiTypography-root MuiTypography-body1"
        >
          Oct 10, 1998 - Feb 26, 2021
        </dd>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-12"
      >
        <dt
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
        >
          Activities
        </dt>
        <dd
          class="MuiTypography-root MuiTypography-body1"
        >
          No Activities
        </dd>
      </div>
    </div>
  </dl>
</DocumentFragment>
`;

exports[`ProjectDetails renders correctly with no end date (only start date) 1`] = `
<DocumentFragment>
  <dl
    class="MuiBox-root MuiBox-root-1"
  >
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-6"
      >
        <dt
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
        >
          Type
        </dt>
        <dd
          class="MuiTypography-root MuiTypography-body1"
        >
          Project type
        </dd>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-6"
      >
        <dt
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
        >
          Timeline
        </dt>
        <dd
          class="MuiTypography-root MuiTypography-body1"
        >
          <span>
            Start Date:
          </span>
           Oct 10, 1998
        </dd>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-sm-12"
      >
        <dt
          class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
        >
          Activities
        </dt>
        <dd
          class="MuiTypography-root MuiTypography-body1"
        >
          Activity code
        </dd>
      </div>
    </div>
  </dl>
</DocumentFragment>
`;
